--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axi": "^1.0.0",
+    "axios": "^0.19.0",
     "d3": "^5.14.2",
     "react": "^16.12.0",
     "react-d3-graph": "^2.3.0",
@@ -19,6 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
