--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+numpy==1.17.4
 pkg-resources==0.0.0
 uuid==1.30
 Werkzeug==0.16.0
